Wrote a stack handler for making socket data reading less of a hassle.

--- a/arca4/arca4.csproj
+++ b/arca4/arca4.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="AresTCPDataStack.cs" />
+    <Compile Include="ProtoMessage.cs" />
     <Compile Include="ZipLib.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
