--- a/arca4/arca4.csproj
+++ b/arca4/arca4.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arca.cs" />
+    <Compile Include="AresTCPPacketProcessor.cs" />
+    <Compile Include="AresTCPPacketReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AresTCPDataStack.cs" />
