Started the client handshake code.  Saving work so far.

--- a/arca4/arca4.csproj
+++ b/arca4/arca4.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AresTCPDataStack.cs" />
     <Compile Include="ProtoMessage.cs" />
+    <Compile Include="ServerEvents.cs" />
     <Compile Include="UserObject.cs" />
     <Compile Include="UserPool.cs" />
     <Compile Include="ZipLib.cs" />
