--- a/arca4/arca4.csproj
+++ b/arca4/arca4.csproj
@@ -48,12 +48,14 @@
     <Compile Include="AresTCPPacketReader.cs" />
     <Compile Include="AresTCPPackets.cs" />
     <Compile Include="AresTCPPacketWriter.cs" />
+    <Compile Include="Bans.cs" />
     <Compile Include="CommandObject.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AresTCPDataStack.cs" />
     <Compile Include="ProtoMessage.cs" />
+    <Compile Include="RejectionType.cs" />
     <Compile Include="ServerEvents.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="UserObject.cs" />
