Added flooding protection against joining users (max clients per ip and acceptable time between login attempts) also implemented the Ares fast ping protocol to support the "keep alive" option in newer versions of Ares.  Also added ghost detection to help minimize bouncing.

--- a/arca4/arca4.csproj
+++ b/arca4/arca4.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Settings.cs" />
     <Compile Include="UserObject.cs" />
     <Compile Include="UserPool.cs" />
+    <Compile Include="UserRecordManager.cs" />
     <Compile Include="ZipLib.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
