--- a/arca4/arca4.csproj
+++ b/arca4/arca4.csproj
@@ -52,8 +52,10 @@
     <Compile Include="BrowseRequest.cs" />
     <Compile Include="CommandObject.cs" />
     <Compile Include="DebugLog.cs" />
+    <Compile Include="DefaultCommands.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Mime.cs" />
+    <Compile Include="Muzzles.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AresTCPDataStack.cs" />
