--- a/arca4/arca4.csproj
+++ b/arca4/arca4.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Bans.cs" />
     <Compile Include="BrowseRequest.cs" />
     <Compile Include="CommandObject.cs" />
+    <Compile Include="CustomPackets.cs" />
     <Compile Include="DebugLog.cs" />
     <Compile Include="DefaultCommands.cs" />
     <Compile Include="Helpers.cs" />
