Continuing support for unofficial protocol.  Added support for custom fonts and custom tags.

--- a/arca4/arca4.csproj
+++ b/arca4/arca4.csproj
@@ -51,9 +51,11 @@
     <Compile Include="Bans.cs" />
     <Compile Include="BrowseRequest.cs" />
     <Compile Include="CommandObject.cs" />
+    <Compile Include="CustomPacketProcessor.cs" />
     <Compile Include="CustomPackets.cs" />
     <Compile Include="DebugLog.cs" />
     <Compile Include="DefaultCommands.cs" />
+    <Compile Include="Font.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Mime.cs" />
     <Compile Include="Muzzles.cs" />
