Custom Emoticons protocol implemented.  This concludes the implementation of unofficial protocol other than a whole lot of testing to make sure its all running smoothly.

--- a/arca4/arca4.csproj
+++ b/arca4/arca4.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Bans.cs" />
     <Compile Include="BrowseRequest.cs" />
     <Compile Include="CommandObject.cs" />
+    <Compile Include="CustomEmoticon.cs" />
     <Compile Include="CustomPacketProcessor.cs" />
     <Compile Include="CustomPackets.cs" />
     <Compile Include="DebugLog.cs" />
