--- a/arca4/arca4.csproj
+++ b/arca4/arca4.csproj
@@ -92,7 +92,7 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>copy $(SolutionDir)Scripting\JS\*.dll $(TargetDir)</PreBuildEvent>
+    <PreBuildEvent>copy "$(SolutionDir)Scripting\JS\*.dll" "$(TargetDir)"</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
