Switch to #ZipLib 0.86 trial.  I've left a copy of the library in the OtherFiles folder for now.

--- a/arca4/arca4.csproj
+++ b/arca4/arca4.csproj
@@ -37,6 +37,9 @@
     <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ICSharpCode.SharpZipLib">
+      <HintPath>..\..\..\..\..\Desktop\SharpZipLib_0860_Bin\net-20\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
     <Reference Include="smnetjs">
       <HintPath>..\Scripting\JS\smnetjs.dll</HintPath>
     </Reference>
